<resources>
    <string name="app_name">BackSaver</string>
    <string name="title_home">Home</string>
    <string name="title_stats">Statistics</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_news_exercises">News and exercises</string>
    <string name="title_settings">Settings</string>
    <string name="sound">Sound:</string>
    <string name="vibration">Vibration:</string>
    <string name="connection">Connect to device:</string>
    <string name="rules_settings">How to use this app?</string>
    <string name="title_connection">Connection to the device</string>
    <string name="rules_connection">After calibrating, it is necessary to make the connection to the device. To do so, you should click on the correspondent button in the settings page.
A list of devices will be shown and you must select the Snapki option (SnapKi14) to make the Bluetooth connection. Make sure that your back is in a correct position when you do this, once the first value collected will be the one used to calibrate!</string>
    <string name="title_calibration">Calibration</string>
    <string name="rules_calibration">Firstly, you should place the SnapKi on your back in the cervical area and allow the calibration of the correct position by clicking on the calibration button in the settings page.</string>
    <string name="title_points">Points and Levels</string>
    <string name="rules_points">In this app, you can colect points by reading news, watching the video with exercises (1 point per action) and by having a percentage of correct posture over 70% (5 points) in statistics.
For each 5 points earned, you reach a new level of progress (6 levels are available).</string>
    <string name="welcome">"Hi! Let's see how you are doing!"</string>
    <string name="title_news_exerc">Choose the news you want to read:</string>
    <string name="title2_news_exerc">Or maybe do some exercises</string>
    <string name="news_title1">Here is more evidence sitting too much can kill you</string>
    <string name="news_subtitle1">Sitting more than six hour a day during your free time raises the risk of early death by 19 percent.</string>
    <string name="video">5 exercises to improve your posture</string>
    <string name="news_message1">There’s more evidence that sitting in your free time can kill you.
        People who sat the most were more likely to die from 14 different diseases, the new survey from the American Cancer Society finds.
        The survey of more than 125,000 adults found that those who sat six or more hours a day were 19 percent more likely to die over the next 21 years than those who spent less time on the couch or at a desk after the workday is over.
        “Risk was significantly higher for 14 of the 22 specific causes of death examined, and importantly, for eight of the top 10 leading causes of death in the U.S.,” the American Cancer Society’s Alpa Patel and colleagues wrote in their report, published in the American Journal of Epidemiology.
        It’s not the first study to show that sitting too much can be deadly. But it’s a long-term study of many people, and broke down the causes of death in detail.
        The 14 causes of death that were more likely the longer people sat: cancer, coronary heart disease, stroke, diabetes, kidney disease, suicide, COPD (such as emphysema), pneumonitis due to inhaling something, liver disease, peptic ulcer and other digestive disease, Parkinson’s disease, Alzheimer’s, nervous disorders and musculoskeletal disorders.
        The researchers used data from a larger, ongoing survey of people. They were asked: "During the past year, on an average day (not counting time spent at your job), how many hours per day did you spend sitting (watching television, reading, etc.)?”
        Over the next 21 years, more than 48,000 of the people who answered the survey died.
        Other studies have shown that Americans spend an average of six to eight hours sitting in their free time. This survey supports that, said Dr. Neha Pagidipati, a cardiologist at Duke University who was not involved in the study.
        “It's something that we all do whether we are sitting and watching TV, resting, reading or working at our computer — and it's important to know what health risks could be associated with sitting for that long in the day,” she said.
        And the higher risk of death held even when people said they were trying to exercise.
        “Even if you're doing your recommended 30 minutes of moderate to vigorous physical activity every day of the week, there still can be a risk associated with sitting for the rest of the day,” Pagidipati said.</string>
    <string name="news_subtitle2">A little exercise is better than none</string>
    <string name="news_message2">“We should be moving as much as possible. Get as much physical activity as you can and do not be discouraged if you ca not get the exact amount that the guidelines recommend,” Pagidipati said.
        Federal guidelines say Americans should do 2.5 hours a week of moderate exercise such as brisk walking or 75 minutes a week of running or similarly high-intensity exercise.
        It’s not clear how much is enough to offset a sedentary life. But other studies have shown even a little exercise is better than none.
        “We do not have enough evidence yet to say exactly what the guidelines should be and that is why there are no U.S. guidelines yet on how much people should sit versus move around,” Pagidipati said. “But what we can say with relative confidence is that people are sitting too much and we should sit less and move more.”
        There are several possible explanations for how sitting can be linked with shorter lives. One is obvious.
        “Time spent sitting displaces time spent in physical activity and is associated with lower total physical activity levels,” the researchers wrote.
        “Alternatively, it is possible that time spent sitting, especially when engaged in specific activities such as television viewing, is associated with other unhealthy behaviors, such as excess snacking. This could explain why associations with time spent watching television are generally stronger in magnitude than those for leisure-time spent sitting.”
        Sitting also affects the metabolism, interfering with healthy cholesterol and blood sugar levels.
        As for suicide, it’s possible people who are clinically depressed may be more likely to spend time sitting. And a lack of energy and sitting may be early warning signs of diseases such as Alzheimer’s and Parkinson’s.</string>
    <string name="news1_ref">https://www.nbcnews.com/health/health-news/here-s-more-evidence-sitting-too-much-can-kill-you-n887931</string>
    <string name="news_title2">Stretching is more than a cool down. Here is why you should consider it exercise.</string>
    <string name="news2_subtitle1">Flexibility is far from the only benefit that comes with stretching. The movement is actually a vital form of body maintenance.</string>
    <string name="news2_message1">Whether you’re cooling down after a run or doing a few stretches at your desk when work is starting to become a pain in the neck (literally), most of us recognize the benefit of stretching.
        But we can also probably admit we aren’t doing enough of it. The problem is, we tend to think of it as a bookend to more strenuous exercise — a form of movement used to warm up before you get to the real work or cool down afterwards. But stretching is actually a vital, albeit overlooked, form of exercise, and experts say that the body should be engaging in it on a consistent basis.
        According to John Ford, certified exercise physiologist, owner of JKF Fitness &amp; Health in New York City, flexibility is one of the five components of fitness, which can have it is own tailored exercise program to get specific improvements. "When we talk about stretching we are describing an exercise that can maintain or improve a person’s flexibility.
        Flexibility is defined as the range of motion of a joint or group of joints. The range of motion of any particular joint is dependent on the makeup of your muscles, your physical activity/exercise, your anatomical structure (shout out to the double jointed among us), age and gender. Thus, stretching for flexibility is designed to actively target the range of motion."
        Just as other forms of body conditioning like strength training and cardio are a necessary part of a fitness routine, “stretching should not be overlooked,” adds Kevin Ramsey, Lead Stretch Therapist at Massage Envy. “Stretching helps to resolve tension in the muscles. When this tension is resolved, muscles have a better chance of getting the circulation they need to function normally.
        Circulation is vital in all tissues of the body because this is how nutrition is distributed throughout the tissues. To that extent, stretching may be seen as a form of self-care or conditioning all on its own.”Just as other forms of body conditioning like strength training and cardio are a necessary part of a fitness routine, “stretching should not be overlooked,” adds Kevin Ramsey, Lead Stretch Therapist at Massage Envy.
        “Stretching helps to resolve tension in the muscles. When this tension is resolved, muscles have a better chance of getting the circulation they need to function normally. Circulation is vital in all tissues of the body because this is how nutrition is distributed throughout the tissues. To that extent, stretching may be seen as a form of self-care or conditioning all on its own.”</string>
    <string name="news2_subtitle2">What stretching does for the body</string>
    <string name="news2_message2">While stretching is a movement we certainly can perform at home, it’s becoming increasingly popular in the fitness space, not only on class schedules at big box gyms, but with boutique studios dedicated solely to stretching. “Assisted stretching, done with the help of a professional service provider or stretching ‘coach,’ is proven to increase mobility, flexibility and blood flow and improve how muscles function,” says Ramsey. [...]</string>
    <string name="news2_ref">https://www.nbcnews.com/better/health/stretching-more-cool-down-here-s-why-you-should-consider-ncna901371</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_time">Total Daily Time Spent: 12h </string>
    <string name="average_previous">Last month average: 15º </string>
    <string name="average_actual">This month average: 10º </string>
    <string name="improvement">You have improved: 30 %!</string>
    <string name="month_progress">Your progress during this month...</string>
    <string name="video_uri">Video URI</string>
    <string name="video_url"><![CDATA[https://www.youtube.com/watch?v=5R54QoUbbow&list=PPSV]]></string>
    <string name="play">Play</string>
    <string name="alertFulltext">Hello! You are sitting with a bad posture for 5 minutes... Do some stretching!</string>
    <string name="get_your_exercises_in">Get your exercises in</string>
    <string name="calibration">Device Calibration</string>
    <string name="bl_text">Connect to Bluetooth</string>
    <string name="cal_text">Calibrate your device</string>
    <string name="choose_device">Choose your Bluetooth Device</string>
    <string name="return_dev">Return</string>

</resources>