<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_outline_query_stats_24"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_news_exercises"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/title_news_exercises" />

    <item
        android:id="@+id/navigation_alerts"
        android:icon="@drawable/ic_outline_notifications_active_24"
        android:title="@string/title_alerts" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />
</menu>