<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/article_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/news_title2"
            android:textSize="20sp"
            android:justificationMode="inter_word"
            android:textAppearance=
                "@android:style/TextAppearance.DeviceDefault" />
        <TextView
            android:id="@+id/article_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/news2_subtitle1"
            android:justificationMode="inter_word"
            android:textAppearance=
                "@android:style/TextAppearance.DeviceDefault" />

        <ImageView
            android:id="@+id/news2_image"
            android:layout_width="wrap_content"
            android:layout_height="316dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GfG_full_logo"
            app:srcCompat="@drawable/news2" />

        <TextView
            android:id="@+id/message1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="16dp"
            android:text="@string/news2_message1"
            android:justificationMode="inter_word" />

        <TextView
            android:id="@+id/article_subheading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/news2_subtitle2"
            android:justificationMode="inter_word"
            android:textAppearance=
                "@android:style/TextAppearance.DeviceDefault" />

        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="16dp"
            android:text="@string/news2_message2"
            android:justificationMode="inter_word" />

        <TextView
            android:id="@+id/news2_ref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="16dp"
            android:text="@string/news2_ref"
            android:justificationMode="inter_word" />

    </LinearLayout>

</ScrollView>

