<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:gravity="center_horizontal"
    android:indeterminateTintMode="src_in"
    tools:context=".ui.settings.SettingsFragment">

<LinearLayout
    android:background="@color/teal_700"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="30dip"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

<!--    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:switchMinWidth="56dp"
        android:text="@string/sound"
        android:textColor="@color/white"
        android:textOff="OFF"
        android:textOn="ON"
        android:textSize="25sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />-->

<!--    <Switch
        android:id="@+id/vibrationSwitch"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/switch1"
        android:switchMinWidth="56dp"
        android:text="@string/vibration"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textOff="OFF"
        android:textOn="ON"
        tools:ignore="UseSwitchCompatOrMaterialXml" />-->

    <Button
        android:id="@+id/rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/rules_settings"/>

    <TextView
        android:text="@string/bl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <ImageButton
        android:id="@+id/bluetooth"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_bluetooth"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btcal_background"
        android:contentDescription="@string/calibration"/>

    <TextView
        android:text="@string/cal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/calibration"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_calibration"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btcal_background"
        android:contentDescription="@string/calibration"/>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>