<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stats.StatsViewModel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/day_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:textSize="15sp"
            android:layout_marginTop="25dp"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barchart"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linechart"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:text="@string/day_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:textSize="15sp"/>

        <TextView
            android:text="@string/average_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:textSize="15sp"/>

        <TextView
            android:text="@string/average_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:textSize="15sp"/>

    </LinearLayout>
</ScrollView>